- refactored clients to not use deprecated http client api.